--- a/MASTER07-SequencesSeries/DM0700 Subject Overview.tex
+++ b/MASTER07-SequencesSeries/DM0700 Subject Overview.tex
@@ -1,24 +1,10 @@
-\documentclass{beamer}
-
-\usepackage[english]{babel}
-% or whatever
-
-\usepackage[utf8]{inputenc}
-% or whatever
-
-\usepackage{times}
-\usepackage[T1]{fontenc}
-% Or whatever. Note that the encoding and the font should match. If T1
-\begin{document}
-
-%--------------------------------------------------------------------------------------------%
 
 
 \section{Sequences and Series}
 
 
-\begin{frame}{Overview of Section}
-\Large
+{Overview of Section}
+
 \textbf{Part 1}
   \begin{itemize}
   \item Sequences - what are sequences?
@@ -30,42 +16,15 @@
   \item Recurrences Relationships (Fibonacci Sequence)
  
    \end{itemize}
-\end{frame}
+
 %--------------------------------------------------------------------------------------------%
 
-\section{Proof by Induction}
-\begin{frame}
-\Large
-\textbf{Proof by Induction :  three steps}
-\begin{itemize}
-\item Step 1 : Base Case
-\begin{itemize}
-\item[$\bullet$]  Demonstrate for $n=1$.
-\item[$\bullet$]  Normally a simple calculation.
-\end{itemize}
-\item Step 2 : Induction Hypothesis 
-
-\begin{itemize}
-\item[$\bullet$] State assumption for $n=k$
-\item[$\bullet$]  Can extend assumption of statement for $n=k-1$ in the case of multi-phase recurrence rules 
-\item[$\bullet$] For example, $u_{n+1}$ is evaluated by $u_{n}$ and $u_{n-1}$, the two previous terms.
-\end{itemize}
-
-\item Step 3 : Induction Step.
-\begin{itemize}
-\item[$\bullet$]  Demonstrate for $n=k+1$.
-\item[$\bullet$] 
-This state is main computational component of Proof by Induction method
-\end{itemize}
-\end{itemize}
-
-\end{frame}
 
 %--------------------------------------------------------------------------------------------%
 
 \section{Sigma Notation}
 
-\begin{frame}{Sigma Notation}
+{Sigma Notation}
 
 \textbf{Three Important Summation Identities}\\
 \textit{index term = i , Number of terms = n }
@@ -80,7 +39,7 @@ This state is main computational component of Proof by Induction method
 \end{itemize}
 
 
-\end{frame}
+
 %--------------------------------------------------------------------------------------------%
 
 \end{document}
