--- a/MASTER07-SequencesSeries/UDEMY 8 Series MASTER NOTES.tex
+++ b/MASTER07-SequencesSeries/UDEMY 8 Series MASTER NOTES.tex
@@ -27,51 +27,216 @@
 
 \begin{document}
 
+\section*{Series}
 
-\pagebreak
-\subsection*{Geometric Series}
-A \emph{geometric sequence} $a_n=a_0 r^n$ is a sequence whose terms are multiplied constant ratio $r$ at each step. A \emph{geometric series} $s_n$ is the sum of a geometric sequence.
+
+
+\noindent \textbf{Series}: A series is the sum of a sequence. For a given sequence $a_0,a_1,a_2,a_3,\ldots,a_n,\ldots$ the terms in the corresponding \emph{series} $s_n$ are given by
+\begin{align*}
+  s_0&=a_0\\
+  s_1&=a_0+a_1\\
+  s_2&=a_0+a_1+a_2\\
+  s_3&=a_0+a_1+a_2+a_3,\quad \text{etc}
+\end{align*}
+The general term $s_n$, which is the $n^{th}$ term in the series, is given by
 \begin{equation*}
-  s_n=\sum_{k=0}^n a_0 r^n =  a_0 \sum_{k=0}^n r^n = a_0 + a_0r +a_0 r^2+a_0 r^3 + \cdots 
+  s_n=a_0+a_1+a_2+\cdots+a_{n-1}+a_n
 \end{equation*}
-\noindent \textbf{Example:} Let $a_n=\left(\frac{1}{2}\right)^n$.
+Note that
+\begin{itemize}
+\item Every series is itself another sequence. Therefore a series can have all the properties of sequences; boundedness, limits, etc.
+\item Every sequence $a_n$ has a corresponding series $s_n$.
+\item Every series $s_n$ has a corresponding sequence $a_n=s_n-s_{n-1}$.
+\end{itemize}
+\noindent  \textbf{Example}
+Let $a_n=n^2$, So that the terms in the sequence are $0,1,4,9,16,25,\ldots$
+\begin{align*}
+  s_0&=0\\
+  s_1&=0+1=1\\
+  s_2&=0+1+4=5\\
+  s_3&=0+1+4+9=14,\quad \text{etc}
+\end{align*}
+
+\subsection*{Sigma Notation}
+Instead of writing out a long sum for every term in a series, the greek letter Sigma is used to denote such sums. For a sum over a range or terms $a_p$ to $a_q$, with $p<q$ let
+\begin{equation*}
+  \sum_{k=p}^{q}a_k = a_p+a_{p+1}+a_{p+2}+a_{p+3}+\cdots+a_{q-1}+a_q
+\end{equation*}
+The sum is over the variable $k$ which ranges from the lower bound $p$, increasing in steps of $1$, until it reaches the upper bound $q$. The Sigma denotes that all the terms are to be added together. With this, the general term $s_n$ in the sequence is written
+\begin{multicols}{2}
+$\qquad \qquad s_n=\displaystyle \sum_{k=0}^n a_k$
+\columnbreak
+
+or $\ s_n=\displaystyle \sum_{k=1}^n a_k\quad $ if $a_0$ is not defined.
+\end{multicols}
+\pagebreak
+
+\noindent \textbf{Example:} Sum of first $n$ integers
+\begin{equation*}
+  s_n=\sum_{k=0}^n k = 0 + 1 + 2 + 3 + \cdots + (n-1) + n 
+\end{equation*}
 \begin{center}
-\begin{tabular}{c|c|c|c|c|c|c}
-$n$ & $0$ & $1$ & $2$ & $3$ & $4$ & $5$   \\ \hline
-$a_n$ & $1$ & $\frac{1}{2}$ & $\frac{1}{4}$ & $\frac{1}{8}$ & $\frac{1}{16}$ & $\frac{1}{32}$  \\ \hline
-$s_n$ & $1$ & $1.5$ & $1.75$ & $1.875$ & $1.9375$ & $1.96875$ 
+\begin{tabular}{c|c|c|c|c|c|c|c|c|c|c|c}
+$n$ & $0$ & $1$ & $2$ & $3$ & $4$ & $5$ & $6$ & $7$ & $8$ & $9$ & $10$ \\ \hline
+$a_n$ & $0$ & $1$ & $2$ & $3$ & $4$ & $5$ & $6$ & $7$ & $8$ & $9$ & $10$\\ \hline
+$s_n$ & $0$ & $1$ & $3$ & $6$ & $10$ & $15$ & $21$ & $28$ & $36$ & $45$ & $55$
 \end{tabular}
 \end{center}
-As with arithmetic series, instead of having to sum up every term in a geometric series, a formula for the $n^{th}$ term in the series can be derived.
+Instead of having to perform the summation for each $s_n$, a formula for the sum of the first $n$ integers can be derived.
 \begin{thm*}
-  For a geometric series
   \begin{equation*}
-    s_n = a_0 \sum_{k=0}^n r^n= a_0 \left( \frac{1-r^{n+1}}{1-r} \right)
+    \sum_{k=0}^n k = \frac{n(n+1)}{2}
   \end{equation*}
 \begin{proof}
-To prove this, we need a formula for the sum $S_n=\sum_{k=0}^n r^k$. We proceed proceed by writing out the sum in full, then the sum multiplied by $r$. These two sums are subtracted, resulting in most terms cancelling out.
-  \begin{align*}
-    S_n&=1+r+r^2+r^3+\cdots+r^{n-1}+r^n\\
-    r S_n&=r+r^2+r^3+r^4+\cdots+r+r^{n+1}\\
-    S_n-r S_n&= 1 + (r - r) + (r^2-^2)+\cdots+(r^n-r^n)-r^{n+1}
-  \end{align*}
-The bracketed terms cancel and so
-\begin{equation*}
-  S_n(1-r)=1 -r^{n+1}, \qquad \Rightarrow S_n=\frac{1-r^{n+1}}{1-r}
-\end{equation*}
-Multiplying by $a_0$ now gives the required result.
+  Let $s_n=\displaystyle \sum_{k=0}^n k$. Proceed by writing out this sum, then writing out the reversed sum, and then adding the two
+\\
+\\
+  \begin{tabular}{ccccccccccccccc}
+    \setlength{\arraycolsep}{0.01cm}
+    $s_n$&$=$&$0$&$+$&$1$&$+$&$2$&$+$&$\cdots$&$+$&$(n-2)$&$+$&$(n-1)$&$+$&$n$\\
+    $s_n$&$=$&$n$&$+$&$(n-1)$&$+$&$(n-2)$&$+$&$\cdots$&$+$&$2$&$+$&$1$&$+$&$0$\\\hline
+    $2s_n$&$=$&$n$&$+$&$n$&$+$&$n$&$+$&$\cdots$&$+$&$n$&$+$&$n$&$+$&$n$\\
+  \end{tabular}
+\\
+\\
+\\
+  There are $n+1$ terms in the sum, therefore
+  \begin{equation*}
+    2s_n = (n+1)n, \qquad \Rightarrow s_n=\frac{n(n+1)}{2}, \qquad \text{and so } \sum_{k=0}^n k=\frac{n(n+1)}{2}
+  \end{equation*}
 \end{proof}
 \end{thm*}
-\noindent  \textbf{Example:}
-For $a_n=\left(\frac{1}{2}\right)^n$, the formula gives
-\begin{equation*}
-  s_5=(1)\frac{1-\frac{1}{2^{5+1}}}{1-\frac{1}{2}}=\frac{1-\frac{1}{64}}{\frac{1}{2}}=2\frac{63}{64}=1.96875
-\end{equation*}
-Which matches what was calculated for $s_5$ in the table above. Further terms can be calculated without summation. For example
-\begin{equation*}
-  s_{50}=(1)\frac{1-\frac{1}{2^{50+1}}}{1-\frac{1}{2}}=\frac{1-\frac{1}{2^{51}}}{\frac{1}{2}} \cong=1.99999999999999911182
-\end{equation*}
 
+\noindent \textbf{Other Series Theorems}\\
+If $a_n$ and $b_n$ are sequences, and $c$ is a constant then,
+\[\sum_{k=0}^{n} \left(a_n+b_n\right) = \sum_{k=0}^{n} a_n + \sum_{k=0}^{n}b_n \]
+\[\sum_{k=0}^{n} c a_n = c \sum_{k=0}^{n} a_n \]
+\[\sum_{k=0}^{n} c = (n+1) c\]
+\pagebreak
+
+\subsection*{Arithmetic Series}
+And \emph{arithmetic sequence} $a_n$ is a sequences whose terms increase by a constant difference $d$ at each step. And a \emph{arithmetic series} $s_n$ is the sum of an arithmetic sequence. Formally
+\begin{equation*}
+  a_n=a_0+nd, \qquad s_n=\sum_{k=0}^n \left( a_0 + nd \right)
+\end{equation*}
+\noindent \textbf{Example:}\\
+Let $a_n=10+3n$.
+\begin{center}
+\begin{tabular}{c|c|c|c|c|c|c|c|c}
+$n$ & $0$ & $1$ & $2$ & $3$ & $4$ & $5$ & $6$ & $7$  \\ \hline
+$a_n$ & $10$ & $13$ & $16$ & $19$ & $22$ & $25$ & $28$ & $31$ \\ \hline
+$s_n$ & $10$ & $23$ & $39$ & $58$ & $80$ & $105$ & $133$ & $164$
+\end{tabular}
+\end{center}
+Instead of having to sum up every term in an arithmetic series, a formula for the $n^{th}$ term in the series can be derived.
+\begin{thm*}
+  For an arithmetic series
+  \begin{equation*}
+    s_n = (n+1)\left(a_0 + \frac{n}{2} d\right)
+  \end{equation*}
+\begin{proof}
+This can be proved by using the theorems on the previous page, in particular using the formula for the sum of the first $n$ integers.
+  \begin{align*}
+    s_n=\sum_{k=0}^n a_k = \sum_{k=0}^n a_0+kd &= \sum_{k=0}^n a_0+\sum_{k=0}^n kd\\
+    &= (n+1)a_0+d\sum_{k=0}^n k\\
+    &= (n+1)a_0+d\frac{n(n+1)}{2}= \frac{(n+1)}{2} \left( 2a_0+nd\right)
+  \end{align*}
+\end{proof}
+\end{thm*}
+
+\noindent \textbf{Example:} For $a_n=10+3n$, the formula gives
+\begin{equation*}
+  s_7=(7+1) \left( 10+\dfrac{7}{2} \cdot 3 \right) = 8 \left(  \dfrac{41}{2} \right) = 164
+\end{equation*}
+Which matches what was calculated for $s_7$ in the table above. Using the formula, terms even further out can now be calculated without direct summation. For example
+\begin{align*}
+  s_{100}&=(100+1) \left( 10+\dfrac{100}{2} \cdot 3 \right) = 101 \left(  \dfrac{320}{2} \right) = 16160\\
+  s_{1000}&= 1001 \left( 10+  \dfrac{1000}{2} \cdot 3 \right) =  1511510\\
+\end{align*}
+
+
+\subsection*{Ratio Test}
+To determine whether an infinite series is convergent, the ratio test can be applied. The test examines the ratio of successive terms in the sequence as $n \to \infty$. If this ratio has a limit, the sequences behaves like a geometric sequence for large $n$, and so if the ratio is less than $1$, the series will be convergent.
+
+Formally, given a sequence $a_n$ and the corresponding infinite series $\displaystyle \sum_{n=0}^\infty a_n$. Let
+\begin{equation*}
+  R=\lim_{n \to \infty} \left|\frac{a_{n+1}}{a_n}\right|
+\end{equation*}
+If this limit $R$ exists, then
+\begin{itemize}
+\item if $R<1$, the series is convergent.
+\item if $R>1$, the series is divergent.
+\item if $R=1$ or $R$ does not exist, then the ratio test was inconclusive.
+\end{itemize}
+\noindent  \textbf{Example 1:}\\
+Let $a_n=\dfrac{1}{n!}$, and consider the infinite series $\displaystyle \sum_{n=0}^{\infty} \frac{1}{n!} = 1+1+\frac{1}{2!}+\frac{1}{3!}+\frac{1}{4!}+\cdots$. Since $a_{n+1}=\dfrac{1}{(n+1)!}$
+\begin{equation*}
+  \left| \frac{a_{n+1}}{a_n}\right|=\left| \frac{1}{(n+1)!}\cdot \frac{n!}{1}\right|=\left| \frac{n!}{(n+1)!}\right|=\left| \frac{1}{n+1}\right|=\frac{1}{n+1}
+\end{equation*}
+So to evaluate $R$,
+\begin{equation*}
+  R=\lim_{n \to \infty} \left|\frac{a_{n+1}}{a_n}\right|=\lim_{n \to \infty} \frac{1}{n+1}=0
+\end{equation*}
+So $R=0$ meaning that $R<1$, and therefore the infinite series $ \sum_{n=0}^{\infty} \frac{1}{n!}$ is convergent.
+
+\noindent  \textbf{Example 2:}\\
+Let $a_n=\dfrac{2^n}{n^2}$, and consider the infinite series $\displaystyle \sum_{n=0}^{\infty} \frac{2^n}{n^2}$. Since $a_{n+1}=\dfrac{2^{n+1}}{(n+1)^2}$
+\begin{equation*}
+  \left| \frac{a_{n+1}}{a_n}\right|=\left| \frac{2^{n+1}}{(n+1)^2}\cdot \frac{n^2}{2^n}\right|=\left| \frac{2^{n+1}}{2^n}\cdot\frac{n^2}{(n+1)^2}\right|=2 \left(\frac{n}{n+1}\right)^2
+\end{equation*}
+So to evaluate $R$,
+\begin{equation*}
+  R=\lim_{n \to \infty} \left|\frac{a_{n+1}}{a_n}\right|=\lim_{n \to \infty} 2 \left(\frac{n}{n+1}\right)^2=\lim_{n \to \infty} 2 \left(\frac{1}{1+\frac{1}{n}}\right)^2=2\left(\frac{1}{1+0}\right)^2=2
+\end{equation*}
+So $R=2$ meaning $R>1$, and therefore the infinite series $\displaystyle \sum_{n=0}^{\infty} \frac{2^n}{n^2}$ is divergent.
+
+\section*{Functions Defined by Infinite Series}
+Convergent infinite series are often used to define functions. The \emph{exponential function} $y=e^x=\text{exp}(x)$ is defined as
+\begin{equation}
+\label{eq:exp_def_taylor}
+  \text{exp}(x) = \sum_{n=0}^{\infty} \frac{x^n}{n!}=1+x+\frac{x^2}{2!}+\frac{x^3}{3!}+\frac{x^4}{4!}+\cdots
+\end{equation}
+The ratio test can be used to show that this infinite series is convergent for all values of $x$. Here, the sequence terms are $a_n=\dfrac{x^n}{n!}$, so $a_{n+1}=\dfrac{x^{n+1}}{(n+1)!}$, and
+\begin{equation*}
+  \left| \frac{a_{n+1}}{a_n}\right|=\left| \frac{x^{n+1}}{(n+1)!}\cdot \frac{n!}{x^n}\right|=\left| \frac{x^{n+1}}{x^n}\cdot\frac{n!}{(n+1)!}\right|=\left|x \frac{1}{n+1}\right| = \frac{|x|}{n+1}
+\end{equation*}
+So to evaluate $R$,
+\begin{equation*}
+  R=\lim_{n \to \infty} \left|\frac{a_{n+1}}{a_n}\right|=\lim_{n \to \infty} \frac{|x|}{n+1}=0
+\end{equation*}
+So $R<1$ and the series is convergent for all $x$.
+
+The infinite series can be used to approximate $e^x$ to as many decimal places desired. To do this, use the sequence terms to evaluate the terms in the series $\displaystyle s_n=\sum_{k=0}^{n} \frac{x^k}{k!}$. This is best done using a table similar to the one below.
+
+For example, to evaluate $e^{0.3}$ to three decimal places\footnote{below the decimal point}, the terms in the series $\displaystyle s_n=\sum_{k=0}^{n} \frac{(0.3)^k}{k!}$ must be computed until the desired accuracy is reached.
+%\begin{tabular}{|l|c|c:c:c:c:c:c:c:c:c:c:c|c|c:c:c:c:c:c:c:c:c:c:c|}\hline
+\begin{center}
+  
+\begin{tabular}{|l|c|p{0.1em}p{0.1em}p{0.1em}p{0.1em}p{0.1em}p{0.1em}p{0.1em}p{0.1em}p{0.1em}p{0.1em}p{0.1em}|c|p{0.1em}p{0.1em}p{0.1em}p{0.1em}p{0.1em}p{0.1em}p{0.1em}p{0.1em}p{0.1em}p{0.1em}p{0.1em}|}\hline
+$n$ & \ & \multicolumn{11}{c|}{$a_n$} & \ & \multicolumn{11}{c|}{$s_n$} \\\hline
+$0$ & \ &
+$1$ & $\cdot$ & $0$ &  &  &  &  &  &  &  &  & \ &
+$1$ & $\cdot$ & $0$ &  &  &  &  &  &  &  &  \\ \hline
+$1$ & \ &
+$0$ & $\cdot$ & $3$ &  &  &  &  &  &  &  &  & \ &
+$1$ & $\cdot$ & $3$ &  &  &  &  &  &  &  &  \\ \hline
+$2$ & \ &
+$0$ & $\cdot$ & $0$ & $4$ & $5$ &  &  &  &  &  &  & \ &
+$1$ & $\cdot$ & $3$ & $4$ & $5$ &  &  &  &  &  &  \\ \hline
+$3$ & \ &
+$0$ & $\cdot$ & $0$ & $0$ & $4$ & $5$ &  &  &  &  &  & \ &
+$1$ & $\cdot$ & $3$ & $4$ & $9$ & $5$ &  &  &  &  &  \\ \hline
+$4$ & \ &
+$0$ & $\cdot$ & $0$ & $0$ & $0$ & $3$ & $3$ & $7$ & $5$ &  &  & \ &
+$1$ & $\cdot$ & $3$ & $4$ & $9$ & $8$ & $3$ & $7$ & $5$ &  &  \\ \hline
+$5$ & \ &
+$0$ & $\cdot$ & $0$ & $0$ & $0$ & $0$ & $2$ & $0$ & $2$ & $5$ &  & \ &
+$1$ & $\cdot$ & $3$ & $4$ & $9$ & $8$ & $5$ & $7$ & $7$ & $5$ &  \\ \hline
+\end{tabular}
+\end{center}
+The series can be summed indefinitely but in practice some kind of stopping condition is needed. A heuristic stopping condition can be used; for example, we can stop when the terms $a_n$ become small enough, or when the digits of $s_n$ appear to have converged to enough decimal places. The first condition assumes that the terms $a_n$ never become large again, and the second condition may have problems if the terms $a_n$ alternate around $0$. However, in practice, we can stop if the series appears to have converged after a few iterations.
+
+In this case, to $3$ decimal places $e^{0.3} \cong 1.349$. A more accurate estimate would be $e^{0.3}\cong 1.34985880757600310398$.
 
 \subsection*{Exponential Function}
 
